// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thing with base, 1 property and 1 action 1`] = `
"{
    \\"name\\": \\"Testthing\\",
    \\"type\\": \\"Thing\\",
    \\"href\\": \\"http://localhost:5000/things/testthing\\",
    \\"properties\\": {
        \\"testProperty\\": {
            \\"type\\": \\"integer\\",
            \\"description\\": \\"Test Property Description\\",
            \\"href\\": \\"/properties/testproperty\\"
        }
    },
    \\"actions\\": {
        \\"testAction\\": {
            \\"description\\": \\"Test Action Description\\"
        }
    },
    \\"events\\": {},
    \\"links\\": [
        {
            \\"rel\\": \\"actions\\",
            \\"href\\": \\"/actions\\"
        },
        {
            \\"rel\\": \\"events\\",
            \\"href\\": \\"/events\\"
        },
        {
            \\"rel\\": \\"alternate\\",
            \\"href\\": \\"ws://localhost:5000/things/testthing\\"
        }
    ]
}"
`;

exports[`thing without base, 1 property with multiple links 1`] = `
"{
    \\"name\\": \\"Testthing\\",
    \\"type\\": \\"Thing\\",
    \\"href\\": \\"http://localhost:5000/things/testthing\\",
    \\"properties\\": {
        \\"testProperty\\": {
            \\"type\\": \\"integer\\",
            \\"href\\": \\"/properties/testproperty\\"
        }
    },
    \\"actions\\": {},
    \\"events\\": {},
    \\"links\\": [
        {
            \\"rel\\": \\"actions\\",
            \\"href\\": \\"/actions\\"
        },
        {
            \\"rel\\": \\"events\\",
            \\"href\\": \\"/events\\"
        },
        {
            \\"rel\\": \\"alternate\\",
            \\"href\\": \\"ws://localhost:5000/things/testthing\\"
        }
    ]
}"
`;
